@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.0 (pending)
 ==========================
 
+- Added clear button to log message window
 - Support conditional parameter preview mode
 - Fix for size grip in GraphWidgetContainer on OSX
 - Fixes for missing title bar and menu bar on OSX
